[project]
name = "feedgenerate"
version = "0.1.0"
description = "Optimize sheep feed on pasture"
authors = [
    {name = "Reed Anderson"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pulp (>=3.0.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
